# loki-testbed

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: game.yml
data/scenes/: main.scene.yml
data/sprites/ditto/: ditto.sprite.yml
data/tilemaps/: clearing.tilemap.yml
data/tilesets/forest/: forest.tileset.yml
sources/: CharacterControllerComponent.cpp  CharacterControllerComponent.hpp  ModuleEntry.cpp
